--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
     var buildUrl = "Build";
     var loaderUrl = buildUrl + "/mmm-1.loader.js";
     var config = {
-      dataUrl: buildUrl + "/mmm-1.data.unityweb",
-      frameworkUrl: buildUrl + "/mmm-1.framework.js.unityweb",
-        codeUrl: buildUrl + "/mmm-1.wasm.unityweb",
+      dataUrl: buildUrl + "/mmm-1.data",
+      frameworkUrl: buildUrl + "/mmm-1.framework.js",
+        codeUrl: buildUrl + "/mmm-1.wasm",
       streamingAssetsUrl: "StreamingAssets",
       companyName: "Kiseki Games",
       productName: "My Mini Mart",
